--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
+    "github-markdown-css": "^5.3.0",
     "gray-matter": "^4.0.3",
     "icones": "^1.0.0",
     "remark": "^15.0.1",
@@ -26,6 +27,7 @@
     "@antfu/eslint-config": "^1.0.0-beta.27",
     "@iconify-json/carbon": "^1.1.21",
     "@iconify-json/twemoji": "^1.1.12",
+    "@nuxt/content": "^2.9.0",
     "@nuxtjs/color-mode": "^3.3.0",
     "@pinia/nuxt": "^0.5.1",
     "@unocss/eslint-config": "^0.56.5",
