--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^8.51.0",
     "nuxt": "^3.8.0",
     "pinia": "^2.1.7",
+    "prisma": "^5.5.2",
     "typescript": "^5.2.2",
     "vue-tsc": "^1.8.19"
   }
