--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
-    "axios": "^1.6.0",
+    "axios": "^1.6.7",
     "gray-matter": "^4.0.3",
     "icones": "^1.0.0",
     "remark": "^15.0.1",
@@ -24,23 +24,23 @@
     "turndown": "^7.1.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^1.0.0-beta.27",
-    "@iconify-json/carbon": "^1.1.21",
-    "@iconify-json/twemoji": "^1.1.12",
-    "@nuxt/content": "^2.9.0",
-    "@nuxtjs/color-mode": "^3.3.0",
+    "@antfu/eslint-config": "^1.2.1",
+    "@iconify-json/carbon": "^1.1.31",
+    "@iconify-json/twemoji": "^1.1.15",
+    "@nuxt/content": "^2.12.1",
+    "@nuxtjs/color-mode": "^3.3.2",
     "@pinia/nuxt": "^0.5.1",
     "@unocss/eslint-config": "^0.56.5",
     "@unocss/nuxt": "^0.56.5",
-    "@vite-pwa/nuxt": "^0.1.1",
-    "@vue-macros/nuxt": "^1.9.4",
-    "@vueuse/nuxt": "^10.5.0",
+    "@vite-pwa/nuxt": "^0.1.2",
+    "@vue-macros/nuxt": "^1.9.21",
+    "@vueuse/nuxt": "^10.9.0",
     "consola": "^3.2.3",
-    "eslint": "^8.51.0",
-    "nuxt": "^3.8.0",
+    "eslint": "^8.57.0",
+    "nuxt": "^3.10.3",
     "pinia": "^2.1.7",
-    "prisma": "^5.5.2",
-    "typescript": "^5.2.2",
-    "vue-tsc": "^1.8.19"
+    "prisma": "^5.11.0",
+    "typescript": "^5.4.2",
+    "vue-tsc": "^1.8.27"
   }
 }
