--- a/package.json
+++ b/package.json
@@ -16,34 +16,36 @@
   "dependencies": {
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "gray-matter": "^4.0.3",
     "icones": "^1.0.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "reveal.js": "^5.1.0",
     "three": "^0.162.0",
-    "turndown": "^7.1.3"
+    "turndown": "^7.2.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^1.2.1",
-    "@iconify-json/carbon": "^1.1.31",
+    "@iconify-json/carbon": "^1.1.34",
     "@iconify-json/twemoji": "^1.1.15",
     "@nuxt/content": "^2.12.1",
-    "@nuxtjs/color-mode": "^3.3.3",
+    "@nuxtjs/color-mode": "^3.4.1",
     "@pinia/nuxt": "^0.5.1",
+    "@types/reveal.js": "^5.0.3",
     "@types/three": "^0.162.0",
     "@unocss/eslint-config": "^0.56.5",
     "@unocss/nuxt": "^0.56.5",
     "@vite-pwa/nuxt": "^0.1.2",
-    "@vue-macros/nuxt": "^1.9.28",
-    "@vueuse/nuxt": "^10.9.0",
+    "@vue-macros/nuxt": "^1.9.35",
+    "@vueuse/nuxt": "^10.10.0",
     "consola": "^3.2.3",
     "eslint": "^8.57.0",
-    "nuxt": "^3.11.1",
+    "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
-    "prisma": "^5.11.0",
+    "prisma": "^5.14.0",
     "raw-loader": "^4.0.2",
-    "typescript": "^5.4.3",
+    "typescript": "^5.4.5",
     "vue-tsc": "^1.8.27"
   }
 }
