--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "cd app/blog & pnpm dev",
-    "pw": "cd wasm/wasm-scene & wasm-pack build"
+    "pw": "cd wasm/wasm-scene & wasm-pack build",
+    "build": "cd app/blog & pnpm build"
   },
   "keywords": [],
   "author": "Cksheuen",
