--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "cd app/blog & pnpm dev",
     "pw": "cd wasm/wasm-scene & wasm-pack build",
-    "build": "cd app/blog & pnpm build"
+    "build:web": "cd app/blog & pnpm build",
+    "build": "pnpm pw & pnpm build:web"
   },
   "keywords": [],
   "author": "Cksheuen",
