--- a/app/blog/package.json
+++ b/app/blog/package.json
@@ -24,8 +24,7 @@
     "remark-html": "^16.0.1",
     "reveal.js": "^5.1.0",
     "three": "^0.162.0",
-    "turndown": "^7.2.0",
-    "wasm_scene": "workspace:*"
+    "turndown": "^7.2.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^1.2.1",
