--- a/app/blog/package.json
+++ b/app/blog/package.json
@@ -15,6 +15,7 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@oxc-parser/binding-win32-x64-msvc": "^0.75.1",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "^1.7.2",
