--- a/.github/workflows/blog.yml
+++ b/.github/workflows/blog.yml
@@ -22,6 +22,9 @@ jobs:
       run: npm install -g pnpm
 
     - name: Install dependencies
+      run: pnpm add -F app/blog @oxc-parser/binding-linux-x64-gnu
+
+    - name: Install dependencies
       run: pnpm install
 
     - name: Build project
