--- a/.github/workflows/blog.yml
+++ b/.github/workflows/blog.yml
@@ -13,6 +13,21 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Install Rust
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        target: wasm32-unknown-unknown
+        override: true
+
+    - name: Install wasm-pack
+      run: cargo install wasm-pack
+
+    - name: Build wasm-scene
+      run: |
+        cd wasm/wasm-scene
+        wasm-pack build
+
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
